--- a/app/src/main/res/layout/fragment_random_number_generator.xml
+++ b/app/src/main/res/layout/fragment_random_number_generator.xml
@@ -56,7 +56,7 @@
             </LinearLayout>
 
 
-            <Button
+            <com.example.toolbox.view.AnimatedButton
                 android:id="@+id/generate_button"
                 android:layout_marginVertical="10dp"
                 android:paddingHorizontal="10dp"
