--- a/app/src/main/res/layout/fragment_timer_setter.xml
+++ b/app/src/main/res/layout/fragment_timer_setter.xml
@@ -37,12 +37,13 @@
         android:hint="@string/timer_name"
         android:layout_marginVertical="10dp" />
 
-    <Button
+    <com.example.toolbox.view.AnimatedButton
         android:id="@+id/start_timer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="@string/set"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:layout_gravity="center"
         android:layout_marginTop="40dp" />
 
