--- a/app/src/main/res/layout-land/fragment_calculator.xml
+++ b/app/src/main/res/layout-land/fragment_calculator.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
@@ -12,18 +13,27 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <com.example.toolbox.view.TitleView
+        <com.app.toolbox.view.TitleView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/item_calculator" />
 
-        <TextView
-            android:id="@+id/result"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
             android:layout_weight="1"
-            android:textAlignment="viewEnd"
-            android:textSize="50sp" />
+            android:layout_height="0dp">
+
+            <TextView
+                android:id="@+id/result"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:textAlignment="viewEnd"
+                android:text="0"
+                android:textSize="50sp"
+                tools:ignore="HardcodedText" />
+
+        </ScrollView>
+
     </LinearLayout>
 
     <GridLayout
