--- a/app/src/main/res/layout-land/fragment_timer_setter.xml
+++ b/app/src/main/res/layout-land/fragment_timer_setter.xml
@@ -20,41 +20,24 @@
             android:hint="@string/timer_name"
             android:layout_marginVertical="10dp" />
 
-        <com.example.toolbox.view.AnimatedButton
+        <com.app.toolbox.view.AnimatedButton
             android:id="@+id/start_timer_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/set"
+            android:text="@string/start"
             android:padding="10dp"
             android:textSize="20sp"
             android:layout_gravity="center" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <com.app.toolbox.view.TimeInput
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_gravity="center"
-
+        android:id="@+id/time_input"
         android:gravity="center"
-        android:orientation="horizontal">
-
-        <NumberPicker
-            android:id="@+id/hours_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-        <NumberPicker
-            android:id="@+id/minutes_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-        <NumberPicker
-            android:id="@+id/seconds_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
+        android:orientation="horizontal"/>
 
 </LinearLayout>
