--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
@@ -9,21 +10,26 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
-        <com.example.toolbox.view.TitleView
+        <com.app.toolbox.view.TitleView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/item_calculator" />
 
-        <TextView
-            android:id="@+id/result"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textAlignment="viewEnd"
-            android:textSize="50sp" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/result"
+                android:text="0"
+                android:gravity="center_vertical|end"
+                android:textSize="50sp"
+                tools:ignore="HardcodedText" />
+        </ScrollView>
     </LinearLayout>
 
     <GridLayout
@@ -35,360 +41,5 @@
         android:useDefaultMargins="true" >
 
         <!-- Buttons will be added with java -->
-
     </GridLayout>
 </LinearLayout>
-
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent" >-->
-
-<!--    <com.example.toolbox.view.TitleView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/item_calculator" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/result"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_above="@id/buttons_layout"-->
-<!--        android:layout_marginHorizontal="10dp"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:textAlignment="viewEnd"-->
-<!--        android:textSize="50dp" />-->
-
-<!--    <GridLayout-->
-<!--        android:id="@+id/buttons_layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_marginVertical="15dp"-->
-<!--        android:gravity="center" >-->
-
-<!--        &lt;!&ndash; Buttons added with java &ndash;&gt;-->
-
-<!--    </GridLayout>-->
-
-<!--</RelativeLayout>-->
-
-
-
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:gravity="center"-->
-<!--android:orientation="horizontal" >-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="C"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_c" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="("-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_bracket_open" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text=")"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_bracket_close" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="/"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_divide" />-->
-
-
-<!--</LinearLayout>-->
-
-
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:gravity="center"-->
-<!--android:orientation="horizontal" >-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="√"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_sqrt" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="25sp"-->
-<!--    android:text="x²"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_power" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="!"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_factorial" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="L"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_log" />-->
-
-
-<!--</LinearLayout>-->
-
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:gravity="center"-->
-<!--android:orientation="horizontal" >-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="7"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_7" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="8"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_8" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="9"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_9" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="*"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_multiply" />-->
-
-
-<!--</LinearLayout>-->
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:gravity="center"-->
-<!--android:orientation="horizontal" >-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="4"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_4" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="5"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_5" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="6"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_6" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="-"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_minus" />-->
-
-
-<!--</LinearLayout>-->
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:gravity="center"-->
-<!--android:orientation="horizontal" >-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="1"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_1" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="2"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_2" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="3"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_3" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="+"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_plus" />-->
-
-
-<!--</LinearLayout>-->
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:gravity="center"-->
-<!--android:orientation="horizontal" >-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="R"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_ac" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="0"-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_0" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="."-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_dot" />-->
-
-<!--<com.example.toolbox.view.AnimatedButton-->
-<!--    android:layout_width="72dp"-->
-<!--    android:layout_height="70dp"-->
-<!--    android:textSize="32sp"-->
-<!--    android:text="="-->
-<!--    android:textAlignment="center"-->
-<!--    android:background="@drawable/round_border"-->
-
-<!--    android:layout_margin="2dp"-->
-<!--    android:id="@+id/button_equals" />-->
-
-
-<!--</LinearLayout>-->
