--- a/app/src/main/res/layout/fragment_random_number_generator.xml
+++ b/app/src/main/res/layout/fragment_random_number_generator.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     android:layout_height="match_parent">
 
-    <com.example.toolbox.view.TitleView
+    <com.app.toolbox.view.TitleView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/item_rng" />
@@ -19,18 +19,16 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
             android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/output_textview"
                 android:paddingHorizontal="10dp"
-                android:layout_margin="10dp"
                 android:textSize="50sp"
                 android:text="0.0000"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
-                android:layout_height="100dp" />
+                android:layout_height="85dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,6 +43,8 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:max="100"
+                    android:min="1"
+                    android:progress="10"
                     android:layout_marginEnd="10dp" />
 
                 <TextView
@@ -56,10 +56,9 @@
             </LinearLayout>
 
 
-            <com.example.toolbox.view.AnimatedButton
+            <com.app.toolbox.view.AnimatedButton
                 android:id="@+id/generate_button"
                 android:layout_marginVertical="10dp"
-                android:paddingHorizontal="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/ok" />
