--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.toolbox.view.TitleView
+    <com.app.toolbox.view.TitleView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
@@ -31,30 +31,33 @@
             android:text="00:00:00.00"
             tools:ignore="HardcodedText" />
 
-        <com.example.toolbox.view.AnimatedButton
+        <com.app.toolbox.view.AnimatedButton
             android:id="@+id/start_button"
             android:layout_width="150dp"
             android:layout_height="60dp"
+            android:layout_margin="2dp"
             android:text="@string/start"
             android:textSize="18sp"
-            android:background="@drawable/round_border"
+            android:background="@drawable/background_with_border"
             android:textStyle="bold" />
 
-        <com.example.toolbox.view.AnimatedButton
+        <com.app.toolbox.view.AnimatedButton
             android:id="@+id/reset_button"
+            android:layout_margin="2dp"
             android:layout_width="153dp"
-            android:background="@drawable/round_border"
+            android:background="@drawable/background_with_border"
             android:layout_height="60dp"
             android:text="@string/reset"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"/>
 
-        <com.example.toolbox.view.AnimatedButton
+        <com.app.toolbox.view.AnimatedButton
             android:id="@+id/stop_button"
             android:layout_width="150dp"
+            android:layout_margin="2dp"
             android:layout_height="60dp"
-            android:background="@drawable/round_border"
+            android:background="@drawable/background_with_border"
             android:text="@string/stop"
             android:textSize="18sp"
             android:textStyle="bold"
