--- a/app/src/main/res/layout/fragment_timer_root.xml
+++ b/app/src/main/res/layout/fragment_timer_root.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.toolbox.view.TitleView
+    <com.app.toolbox.view.TitleView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -12,7 +12,6 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/timer_container"
-        android:layout_margin="14dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
