--- a/app/src/main/res/layout/view_item.xml
+++ b/app/src/main/res/layout/view_item.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.toolbox.view.ItemView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.app.toolbox.view.ItemView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@drawable/round_border"
     android:gravity="center"
-    android:orientation="horizontal"
-    app:customColor="@color/blue">
+    android:layout_margin="4dp"
+    android:background="@drawable/background_with_border"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_weight="3"
         android:gravity="center"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:id="@+id/title_view"
+            android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
         <TextView
-            android:id="@+id/content_preview_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:id="@+id/content_preview_view"
             android:textColor="@color/white"
             android:textSize="15sp" />
 
     </LinearLayout>
 
     <ImageButton
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="5dp"
+        android:scaleType="fitCenter"
         android:id="@+id/deleteNote_button"
-
-        android:layout_width="35dp"
-        android:layout_height="35dp"
         android:background="@color/blue"
         android:contentDescription="@string/delete"
         android:src="@drawable/delete_icon" />
 
-</com.example.toolbox.view.ItemView>
+</com.app.toolbox.view.ItemView>
