--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="CustomView">
-        <attr name="customColor" format="color" />
-        <!-- Add other custom attributes here -->
+    <declare-styleable name="TimeInput">
+        <attr name="title" format="string" />
     </declare-styleable>
 </resources>
