Changed notepad logic to use intents. Added version check with Sockets. Changed UI and app icon. Fixed common issues.

--- a/app/src/main/res/drawable/no_margin_round_shape.xml
+++ b/app/src/main/res/drawable/no_margin_round_shape.xml
@@ -9,7 +9,7 @@
 
         <shape>
             <corners android:radius="40dp" />
-            <solid android:color="@color/dark_blue" />
+            <solid android:color="@color/darkBlue" />
         </shape>
     </item>
 
