--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,5 +8,5 @@
     <color name="darkGray">#494949</color>
     <color name="lightGray">#C6C6C6</color>
 
-    <color name="border_color">#343434</color>
+    <color name="border_color">#DDDDDD</color>
 </resources>
