--- a/app/src/main/res/drawable/background_with_border.xml
+++ b/app/src/main/res/drawable/background_with_border.xml
@@ -9,9 +9,9 @@
         android:bottom="5dp"-->
 
         <shape>
-            <corners android:radius="30dp" />
-            <solid android:color="@color/blue" />
-            <stroke android:width="4dp" android:color="#000000" />
+            <corners android:radius="15dp" />
+            <gradient android:centerColor="@color/darkBlue" android:centerX="@integer/material_motion_duration_long_1" />
+            <stroke android:width="1dp" android:color="@color/border_color" />
         </shape>
     </item>
 </layer-list>
