--- a/app/src/main/res/drawable/no_background_border.xml
+++ b/app/src/main/res/drawable/no_background_border.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners android:radius="30dp" />
-            <stroke android:width="4dp" android:color="#000000" />
+            <corners android:radius="15dp" />
+            <stroke android:width="1dp" android:color="@color/border_color" />
         </shape>
     </item>
 </layer-list>
