--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -22,10 +22,14 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:background="@drawable/no_background_border"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/result"
+                android:textAlignment="center"
                 android:text="0"
+                android:layout_marginTop="60dp"
+                android:layout_marginHorizontal="15dp"
                 android:gravity="center_vertical|end"
                 android:textSize="50sp"
                 tools:ignore="HardcodedText" />
