--- a/app/src/main/res/layout/fragment_timer_list.xml
+++ b/app/src/main/res/layout/fragment_timer_list.xml
@@ -27,6 +27,8 @@
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         app:srcCompat="@drawable/add_icon"
+        app:tint="@color/black"
+        app:backgroundTint="@color/lightGray"
         app:fabSize="normal" />
 
 </RelativeLayout>
