--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -26,7 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/result"
-                android:textAlignment="center"
+                android:textAlignment="viewEnd"
+                android:paddingEnd="20dp"
                 android:text="0"
                 android:layout_marginTop="60dp"
                 android:layout_marginHorizontal="15dp"
