Changed notepad logic to use intents. Added version check with Sockets. Changed UI and app icon. Fixed common issues.

--- a/app/src/main/res/layout/fragment_timer_list.xml
+++ b/app/src/main/res/layout/fragment_timer_list.xml
@@ -26,6 +26,7 @@
         android:layout_margin="40dp"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
+        android:contentDescription="@string/add_a_timer"
         app:srcCompat="@drawable/add_icon"
         app:tint="@color/black"
         app:backgroundTint="@color/lightGray"
