--- a/app/src/main/res/layout-land/fragment_stopwatch.xml
+++ b/app/src/main/res/layout-land/fragment_stopwatch.xml
@@ -6,22 +6,22 @@
     android:orientation="vertical">
 
     <ImageButton
+        android:layout_margin="10dp"
         android:layout_alignParentEnd="true"
         android:id="@+id/stopwatch_settings"
         android:layout_width="wrap_content"
-        android:layout_margin="10dp"
-        android:src="@drawable/settings"
-        android:background="@android:color/transparent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:src="@drawable/settings"
         android:contentDescription="settings button"
         tools:ignore="HardcodedText" />
 
     <LinearLayout
         android:layout_centerInParent="true"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -29,7 +29,7 @@
             android:id="@+id/time_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:textSize="50sp"
             android:textStyle="bold"
             android:text="00:00:00.00"
