--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,34 @@
         android:id="@+id/hr"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_above="@id/bottom_navigation"
+        android:layout_above="@id/bottom_container"
         android:layout_marginBottom="5dp"
         android:background="@color/black" />
 
-    <com.app.toolbox.view.navigation.NavigationView
-        android:id="@+id/bottom_navigation"
+    <LinearLayout
+        android:id="@+id/bottom_container"
+        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="45dp" />
+        android:layout_height="wrap_content">
+
+        <com.app.toolbox.view.navigation.NavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="0dp"
+            android:layout_weight="8"
+            android:layout_height="45dp" />
+
+        <ImageButton
+            android:id="@+id/settings_button"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/settings"
+            android:src="@drawable/settings_main"
+            android:layout_width="0dp"
+            android:scaleType="centerInside"
+            android:layout_marginVertical="5dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 </RelativeLayout>
