--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,6 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".fragment.stopwatch.SettingsFragment">
 
+    <com.app.toolbox.view.TitleView
+        android:text="@string/settings"
+        android:paddingHorizontal="10dp"
+        android:background="@drawable/background_with_border"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <CheckBox
         android:fontFamily="@font/zalando_sans_bold"
         android:paddingHorizontal="10dp"
