Stopwatch code got cleaner. Removed pointless class BroadcastSenderService added widgets(not working)

--- a/app/src/main/res/layout-land/activity_timer_alert.xml
+++ b/app/src/main/res/layout-land/activity_timer_alert.xml
@@ -6,7 +6,7 @@
     android:paddingHorizontal="20dp"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".fragment.timer.TimerAlertActivity">
+    tools:context=".tools.timer.TimerAlertActivity">
 
     <LinearLayout
         android:orientation="vertical"
