--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,6 +20,17 @@
         android:layout_weight="1"
         android:layout_height="0dp" />
 
+    <TextView
+        android:background="#ff0000"
+        android:textColor="#fff"
+        android:text=" Unavailable"
+        android:textStyle="bold"
+        android:textSize="45sp"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:ignore="HardcodedText" />
+
     <ScrollView
         android:layout_weight="11"
         android:layout_width="match_parent"
