--- a/app/src/main/res/layout/activity_timer_alert.xml
+++ b/app/src/main/res/layout/activity_timer_alert.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:paddingHorizontal="50dp"
     android:layout_height="match_parent"
-    tools:context=".fragment.timer.TimerAlertActivity">
+    tools:context=".tools.timer.TimerAlertActivity">
 
     <ImageView
         android:contentDescription="timer icon"
