--- a/app/src/main/res/layout/fragment_random_number_generator.xml
+++ b/app/src/main/res/layout/fragment_random_number_generator.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
@@ -42,7 +43,7 @@
                     android:id="@+id/limitInput_seekbar"
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:max="100"
                     android:min="1"
                     android:progress="10"
@@ -51,17 +52,22 @@
                 <TextView
                     android:id="@+id/current_limit_textview"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0" />
+                    android:layout_height="40dp"
+                    android:textSize="30sp"
+                    android:layout_marginEnd="10dp"
+                    android:text="0"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
 
             <com.app.toolbox.view.AnimatedButton
                 android:id="@+id/generate_button"
-                android:layout_marginVertical="10dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_gravity="center"
+                android:paddingHorizontal="40dp"
                 android:text="@string/ok" />
 
         </LinearLayout>
