Stopwatch code got cleaner. Removed pointless class BroadcastSenderService added widgets(not working). Fixed some calculator issues.

--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/result"
                 android:textAlignment="viewEnd"
+                android:maxLines="3"
                 android:paddingEnd="20dp"
                 android:paddingStart="10dp"
                 android:text="0"
