--- a/app/src/main/res/layout/stopwatch_widget.xml
+++ b/app/src/main/res/layout/stopwatch_widget.xml
@@ -3,15 +3,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="10dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:gravity="center"
+    android:background="@drawable/widget_background"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
-        android:text="Stopwatch"
-        android:textSize="30sp"
-        android:id="@+id/main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:text="00:00:00"
+        android:fontFamily="@font/poppins_bold"
+        android:textSize="50sp"
+        android:id="@+id/time_view"
+        android:textColor="?attr/colorOnPrimary"
+        android:background="@drawable/background_with_border"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:ignore="HardcodedText" />
+
+    <LinearLayout
+        style="?android:attr/buttonBarStyle"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_margin="5dp"
+            android:id="@+id/start_button"
+            android:text="@string/start"
+            android:textSize="20sp"
+            android:textColor="?attr/colorOnPrimary"
+            android:background="@drawable/background_with_border"
+            android:fontFamily="@font/zalando_sans_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_margin="5dp"
+            android:id="@+id/stop_button"
+            android:textSize="20sp"
+            android:text="@string/stop"
+            android:textColor="?attr/colorOnPrimary"
+            android:background="@drawable/background_with_border"
+            android:fontFamily="@font/zalando_sans_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_margin="5dp"
+            android:textSize="20sp"
+            android:textColor="?attr/colorOnPrimary"
+            android:background="@drawable/background_with_border"
+            android:id="@+id/reset_button"
+            android:fontFamily="@font/zalando_sans_bold"
+            android:text="@string/reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </LinearLayout>
