--- a/app/src/main/res/drawable/background_with_border.xml
+++ b/app/src/main/res/drawable/background_with_border.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-
-<!--
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp"
-        android:bottom="5dp"-->
-
-        <shape>
+        <shape android:shape="rectangle">
+            <gradient android:centerColor="?attr/colorPrimary" android:centerX="@integer/material_motion_duration_long_1" />
             <corners android:radius="15dp" />
-            <gradient android:centerColor="@color/darkBlue" android:centerX="@integer/material_motion_duration_long_1" />
-            <stroke android:width="1dp" android:color="@color/border_color" />
+            <stroke android:color="?attr/colorOutline" android:width="3dp"/>
         </shape>
     </item>
 </layer-list>
