--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -4,27 +4,12 @@
     android:id="@+id/main"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingBottom="20dp"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <com.app.toolbox.view.TitleView
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="10dp"
-        android:text="@string/toolbox_settings"
-        android:background="@drawable/no_background_border"
-        android:paddingStart="10dp"
-        android:paddingEnd="6dp"
-        android:maxLines="2"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp" />
-
     <ScrollView
-        android:layout_weight="11"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_margin="10dp"
@@ -34,9 +19,18 @@
 
 <!--            START OF SETTINGS ELEMENTS-->
 
+            <com.app.toolbox.view.TitleView
+                android:layout_marginBottom="10dp"
+                android:text="@string/toolbox_settings"
+                android:background="@drawable/no_background_border"
+                android:paddingStart="10dp"
+                android:paddingEnd="6dp"
+                android:maxLines="2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:text="In progress..."
-                android:paddingHorizontal="10dp"
                 android:textStyle="bold"
                 android:textSize="45sp"
                 android:layout_weight="1"
@@ -169,18 +163,15 @@
 
             </LinearLayout>
 
+            <com.app.toolbox.view.AnimatedButton
+                android:id="@+id/back_button"
+                android:text="@string/back"
+                android:textSize="25sp"
+                android:background="@drawable/background_with_border"
+                android:layout_width="170dp"
+                android:layout_height="50dp" />
+
             <!--            END OF SETTINGS ELEMENTS-->
         </LinearLayout>
     </ScrollView>
-
-    <com.app.toolbox.view.AnimatedButton
-        android:id="@+id/back_button"
-        android:layout_width="120dp"
-        android:layout_height="45dp"
-        android:layout_margin="2dp"
-        android:layout_gravity="center"
-        android:text="@string/back"
-        android:textSize="18sp"
-        android:background="@drawable/background_with_border"
-        android:textStyle="bold" />
 </LinearLayout>
