--- a/app/src/main/res/layout-land/fragment_calculator.xml
+++ b/app/src/main/res/layout-land/fragment_calculator.xml
@@ -29,6 +29,7 @@
                 android:layout_height="0dp"
                 android:textAlignment="viewEnd"
                 android:text="0"
+                android:maxLines="3"
                 android:textSize="50sp"
                 tools:ignore="HardcodedText" />
 
