--- a/app/src/main/res/layout/fragment_notepad_editor.xml
+++ b/app/src/main/res/layout/fragment_notepad_editor.xml
@@ -11,53 +11,62 @@
         android:orientation="horizontal">
 
         <com.app.toolbox.view.AnimatedButton
-            android:layout_weight="1"
             android:id="@+id/back_button"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:text="@string/back" />
+            android:layout_width="120dp"
+            android:layout_height="45dp"
+            android:layout_margin="2dp"
+            android:layout_gravity="center"
+            android:text="@string/back"
+            android:textSize="18sp"
+            android:background="@drawable/background_with_border"
+            android:textStyle="bold" />
 
         <com.app.toolbox.view.AnimatedButton
-            android:layout_marginHorizontal="15dp"
-            android:layout_weight="1"
             android:id="@+id/share_button"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:text="@string/share" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"/>
+            android:layout_width="120dp"
+            android:layout_height="45dp"
+            android:layout_margin="2dp"
+            android:layout_gravity="center"
+            android:text="@string/share"
+            android:textSize="18sp"
+            android:background="@drawable/background_with_border"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/title_view"
-        android:autofillHints="title for the note"
-        android:hint="@string/title"
-        android:inputType="text"
-        android:maxLines="1"
-        android:textSize="30sp"
-        android:fontFamily="@font/poppins_semibold"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/title_view"
+            android:autofillHints="title for note"
+            android:hint="@string/title"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textSize="30sp"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/main_edittext"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="top|start"
-        android:scrollbars="vertical"
-        android:inputType="textMultiLine|textCapSentences"
-        android:overScrollMode="ifContentScrolls"
-        android:padding="4dp"
-        android:scrollHorizontally="false"
-        android:singleLine="false"
-        android:textSize="16sp"
-        android:hint="@string/write_your_notes_here"
-        android:importantForAutofill="no"
-        android:imeOptions="flagNoEnterAction"
-        android:background="@drawable/no_background_no_round_border" />
+        android:layout_height="match_parent">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/main_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="top|start"
+            android:scrollbars="vertical"
+            android:inputType="textMultiLine|textCapSentences"
+            android:overScrollMode="ifContentScrolls"
+            android:scrollHorizontally="false"
+            android:singleLine="false"
+            android:textSize="16sp"
+            android:hint="@string/write_your_notes_here"
+            android:importantForAutofill="no"
+            android:imeOptions="flagNoEnterAction"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
