--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="15dp"
@@ -7,27 +7,42 @@
     android:layout_height="match_parent"
     tools:context=".tools.stopwatch.SettingsFragment">
 
-    <com.app.toolbox.view.TitleView
-        android:text="@string/settings"
-        android:paddingHorizontal="10dp"
+    <LinearLayout
+        android:padding="30dp"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
         android:background="@drawable/background_with_border"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
 
-    <CheckBox
-        android:fontFamily="@font/zalando_sans_bold"
-        android:paddingHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:background="@drawable/background_with_border"
-        android:id="@+id/show_millis"
-        android:text="@string/show_milliseconds_on_stopwatch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <com.app.toolbox.view.TitleView
+            android:text="@string/settings"
+            android:textColor="?attr/colorOnPrimary"
+            android:paddingHorizontal="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <com.app.toolbox.view.AnimatedButton
-        android:id="@+id/save_settings"
-        android:text="@string/save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:fontFamily="@font/zalando_sans_bold"
+            android:paddingHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            android:textColor="?attr/colorOnPrimary"
+            android:id="@+id/show_millis"
+            android:text="@string/show_milliseconds_on_stopwatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <com.app.toolbox.view.AnimatedButton
+            android:id="@+id/save_settings"
+            android:layout_width="160dp"
+            android:layout_height="45dp"
+            android:layout_margin="2dp"
+            android:layout_gravity="center"
+            android:text="@string/save"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</RelativeLayout>
