--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ImageButton
         android:layout_alignParentEnd="true"
         android:id="@+id/stopwatch_settings"
-        android:layout_width="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/settings"
         android:background="@android:color/transparent"
-        android:layout_height="wrap_content"
         android:contentDescription="settings button"
         tools:ignore="HardcodedText" />
 
@@ -40,6 +40,7 @@
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_margin="2dp"
+            app:highlighted="false"
             android:text="@string/start"
             android:textSize="18sp"
             android:background="@drawable/background_with_border"
@@ -52,6 +53,7 @@
             android:background="@drawable/background_with_border"
             android:layout_height="60dp"
             android:text="@string/reset"
+            app:highlighted="true"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"/>
