--- a/app/src/main/res/layout/fragment_stopwatch_root.xml
+++ b/app/src/main/res/layout/fragment_stopwatch_root.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.app.toolbox.view.TitleView
-        android:paddingStart="10dp"
+        android:paddingHorizontal="10dp"
         android:text="@string/item_stopwatch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
