--- a/app/src/main/res/layout/fragment_timer_setter.xml
+++ b/app/src/main/res/layout/fragment_timer_setter.xml
@@ -16,23 +16,31 @@
         android:layout_marginTop="50dp"
         android:layout_gravity="center"/>
 
-    <EditText
-        android:id="@+id/name_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="timer x"
-        android:hint="@string/timer_name"
-        android:layout_marginVertical="10dp"
-        android:inputType="text" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="190dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/name_input"
+            android:layout_width="190dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:autofillHints="timer x"
+            android:hint="@string/timer_name"
+            android:layout_marginVertical="10dp"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.app.toolbox.view.AnimatedButton
         android:id="@+id/start_timer_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/start"
-        android:textSize="20sp"
+        android:layout_width="120dp"
+        android:layout_height="45dp"
+        android:layout_margin="2dp"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp" />
+        android:text="@string/start"
+        android:textSize="18sp"
+        android:background="@drawable/background_with_border"
+        android:textStyle="bold" />
 
 </LinearLayout>
