--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFF</color>
-
-    <color name="darkBlue">#4F4F7D</color>
-
-    <color name="darkGray">#494949</color>
-    <color name="lightGray">#C6C6C6</color>
-
+    <color name="widget_background">#C5000000</color>
+    <color name="white">#BFBFBF</color>
     <color name="border_color">#DDDDDD</color>
 </resources>
