--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="widget_background">#C5FFFFFF</color>
+    <color name="white">#404040</color>
+    <color name="border_color">#343434</color>
+
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFF</color>
-
     <color name="darkBlue">#4F4F7D</color>
-
     <color name="darkGray">#494949</color>
     <color name="lightGray">#C6C6C6</color>
 
-    <color name="border_color">#343434</color>
+    <color name="const_white">#D9D9D9</color>
 </resources>
