--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Toolbox" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<resources>
+    <style name="Theme.Toolbox" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:forceDarkAllowed">true</item>
     </style>
-
-    <style name="Theme.Toolbox" parent="Base.Theme.Toolbox" />
 </resources>
