--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -48,14 +48,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:inputType="number"
-                    android:id="@+id/limit_input"
-                    android:hint="@string/rng_limit"
-                    android:fontFamily="@font/zalando_sans_bold"
-                    android:textSize="30sp"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:inputType="number"
+                        android:id="@+id/limit_input"
+                        android:hint="@string/rng_limit"
+                        android:fontFamily="@font/zalando_sans_bold"
+                        android:textSize="30sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
