--- a/app/src/main/res/layout/rng_widget.xml
+++ b/app/src/main/res/layout/rng_widget.xml
@@ -10,13 +10,13 @@
     <TextView
         android:id="@+id/limit_tv"
         android:fontFamily="@font/zalando_sans_bold"
-        android:textSize="25sp"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:fontFamily="@font/zalando_sans_bold"
-        android:textSize="30sp"
+        android:textSize="50sp"
         android:text="00.00"
         android:id="@+id/number_tv"
         android:layout_width="wrap_content"
@@ -24,9 +24,10 @@
         tools:ignore="HardcodedText" />
 
     <Button
+        style="?android:attr/buttonBarButtonStyle"
         android:fontFamily="@font/zalando_sans_bold"
         android:layout_margin="10dp"
-        android:textSize="27sp"
+        android:textSize="20sp"
         android:text="@string/done"
         android:id="@+id/generate_button"
         android:layout_width="wrap_content"
