--- a/app/src/main/res/layout/stopwatch_widget.xml
+++ b/app/src/main/res/layout/stopwatch_widget.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:text="00:00:00"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/zalando_sans_bold"
         android:textSize="50sp"
         android:id="@+id/time_view"
         android:layout_width="wrap_content"
