--- a/app/src/main/res/drawable/background_with_border.xml
+++ b/app/src/main/res/drawable/background_with_border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:centerColor="?attr/colorPrimary" android:centerX="@integer/material_motion_duration_long_1" />
+            <gradient android:centerColor="?attr/colorAccent" android:centerX="@integer/material_motion_duration_long_1" />
             <corners android:radius="15dp" />
             <stroke android:color="?attr/colorOutline" android:width="3dp"/>
         </shape>
