--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tools.stopwatch.StopwatchFragment$SettingsFragment">
+    tools:context=".tools.stopwatch.StopwatchSettings">
 
     <LinearLayout
         android:padding="30dp"
