--- a/app/src/main/res/layout/rng_widget.xml
+++ b/app/src/main/res/layout/rng_widget.xml
@@ -9,10 +9,10 @@
 
     <TextView
         android:id="@+id/limit_tv"
-        android:fontFamily="@font/zalando_sans_bold"
-        android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/zalando_sans_bold"
+        android:textSize="30sp" />
 
     <TextView
         android:fontFamily="@font/zalando_sans_bold"
@@ -24,7 +24,6 @@
         tools:ignore="HardcodedText" />
 
     <Button
-        style="?android:attr/buttonBarButtonStyle"
         android:fontFamily="@font/zalando_sans_bold"
         android:layout_margin="10dp"
         android:textSize="20sp"
